2011-12-01  Csaba Nemethi <csaba.nemethi@t-online.de>

	* scripts/tablelistUtil.tcl: Improvements for Mac OS X.

2011-11-28  Csaba Nemethi <csaba.nemethi@t-online.de>

	* *.tcl: Bumped the version number to 5.5.
	* *.txt:

	* ../../examples/tablelist/*.tcl: Bumped the version number to 5.5;
	  better support for native look & feel, especially on Mac OS X.

	* scripts/tablelistBind.tcl:   Hidden elements are no longer excluded
	* scripts/tablelistConfig.tcl: from the selection; added the
	* scripts/tablelistEdit.tcl:   "cornerpath" and "cornerlabelpath"
	* scripts/tablelistImages.tcl: subcommands; added support for Mac OS X
	* scripts/tablelistThemes.tcl: 10.7 (Lion); improved a few binding
	* scripts/tablelistUtil.tcl:   scripts; fixed a bug related to embedded
	* scripts/tablelistWidget.tcl: windows.

	* doc/tablelist.html:       Updated the documentation.
	* doc/tablelistWidget.html:

	* doc/embeddedWindows.png: Updated screenshot.

2011-09-08  Csaba Nemethi <csaba.nemethi@t-online.de>

	* CHANGES.txt:                 Improved the check for PNG support in Tk.
	* scripts/tablelistWidget.tcl:

2011-09-04  Csaba Nemethi <csaba.nemethi@t-online.de>

	* *.tcl:                                         Bumped the version
	* *.txt:                                         number to 5.4.
	* ../../examples/tablelist/browse*.tcl:
	* ../../examples/tablelist/bwidget*.tcl:
	* ../../examples/tablelist/config*.tcl:
	* ../../examples/tablelist/dirViewer*.tcl:
	* ../../examples/tablelist/embeddedWindows*.tcl:
	* ../../examples/tablelist/iwidgets*.tcl:
	* ../../examples/tablelist/miscWidgets*.tcl:
	* ../../examples/tablelist/styles*.tcl:
	* ../../examples/tablelist/tileWidgets.tcl:

	* scripts/tablelistBind.tcl:   Added the "-autoscroll" and
	* scripts/tablelistConfig.tcl: "-populatecommand" options; added the
	* scripts/tablelistMove.tcl:   "isexpanded" subcommand; fixed a bug
	* scripts/tablelistWidget.tcl: related to the tree style "aqua"; minor
	  bug fixes.
